log
Thu 24 Aug 2023 01:11:38 AM UTC: 
 tests:  0|6
total_score: 0/70
4f980ed
Thu 24 Aug 2023 01:20:14 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
eb49396
Thu 24 Aug 2023 01:33:39 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
679dda0
Thu 24 Aug 2023 01:33:55 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3a7c645
Thu 24 Aug 2023 01:39:16 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
961f340
Thu 24 Aug 2023 01:47:15 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
daecb78
Thu 24 Aug 2023 01:51:53 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:23: error: ‘List’ {aka ‘struct List’} has no member named ‘next’
   47 |   list->current = list->next;
      |                       ^~
Compilation failed
5bdacc9
Thu 24 Aug 2023 01:52:52 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
84d3445
Thu 24 Aug 2023 01:54:25 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1a5aabd
Thu 24 Aug 2023 01:57:20 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccRvQQHM.o: in function `test_first_next':
test.c:(.text+0xc89): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xce4): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xd15): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
Compilation failed
18b108c
Thu 24 Aug 2023 01:57:29 AM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/cc8r1kEA.o: in function `test_first_next':
test.c:(.text+0xc89): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xce4): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xd15): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
Compilation failed
cc10524
Thu 24 Aug 2023 01:57:31 AM UTC: 
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: /tmp/ccIqofwt.o: in function `test_first_next':
test.c:(.text+0xc89): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xce4): undefined reference to `nextList'
/nix/store/039g378vc3pc3dvi9dzdlrd0i4q93qwf-binutils-2.39/bin/ld: test.c:(.text+0xd15): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
Compilation failed
49663f3
Thu 24 Aug 2023 01:57:58 AM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
75ce40c
Thu 24 Aug 2023 02:00:34 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
2a1d38b
Thu 24 Aug 2023 02:00:51 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
dc8bf1e
Thu 24 Aug 2023 02:10:36 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:19: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   47 |   list->current = current->next;
      |                   ^~~~~~~
      |                   popCurrent
list.c:47:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
62f8e64
Thu 24 Aug 2023 02:10:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:47:19: error: ‘lis’ undeclared (first use in this function); did you mean ‘list’?
   47 |   list->current = lis->current->next;
      |                   ^~~
      |                   list
list.c:47:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
fc90331
Thu 24 Aug 2023 02:10:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6f60002
Thu 24 Aug 2023 02:11:15 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
733861e
Thu 24 Aug 2023 02:14:12 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|0
d5b8a9b
Thu 24 Aug 2023 02:14:28 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
b820fb2
Thu 24 Aug 2023 02:16:45 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:46:4: error: statement with no effect [-Werror=unused-value]
   46 |   (!list->current)return NULL;
      |   ~^~~~~~~~~~~~~~~
list.c:46:19: error: expected ‘;’ before ‘return’
   46 |   (!list->current)return NULL;
      |                   ^~~~~~
      |                   ;
cc1: all warnings being treated as errors
Compilation failed
550d3cb
Thu 24 Aug 2023 02:17:01 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a9545c8
Thu 24 Aug 2023 02:17:40 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|4
total_score: 25/70
290d5e9
Thu 24 Aug 2023 02:17:59 AM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  5|4
total_score: 25/70
011971b
Thu 24 Aug 2023 02:19:41 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
951d4ce
Thu 24 Aug 2023 02:20:47 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  6|4
total_score: 25/70
45d7da0
Thu 24 Aug 2023 02:22:29 AM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
77ed83f
Thu 24 Aug 2023 02:22:38 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
71db4c0
Thu 24 Aug 2023 02:23:10 AM UTC: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
4835325
Thu 24 Aug 2023 02:23:25 AM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  9|3
total_score: 35/70
39a16d6
Thu 24 Aug 2023 02:31:19 AM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  9|3
total_score: 35/70
d4c4c7f
Thu 24 Aug 2023 02:34:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
86866e3
Thu 24 Aug 2023 02:34:48 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ef8a34f
Fri 25 Aug 2023 06:12:12 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  10|2
total_score: 45/70
a9a92d6
